--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# DB connection config
+apring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://106.241.252.54:8090/suhong
+spring.datasource.username=webuser
+spring.datasource.password=webuser
 
+spring.jpa.hibernate.ddl-auto=update
+
+# log config
+logging.level.org.springframework.orm=DEBUG
+logging.level.org.zerock=DEBUG
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# thymeleaf ?? ?? ???? ????? ??? ?? ?? ?? ???..
+spring.thymeleaf.cache=false
