--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.show-sql=true
 
 # thymeleaf ?? ?? ???? ????? ??? ?? ?? ?? ???..
 spring.thymeleaf.cache=false
+
+spring.cloud.gcp.credentials.location=file:/Users/suhong/Downloads/pick-a-food-vision-708c9eb9dfc6.json
+spring.cloud.gcp.project-id=pick-a-food-vision
