--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.show-sql=true
 
 # thymeleaf ?? ?? ???? ????? ??? ?? ?? ?? ???..
 spring.thymeleaf.cache=false
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=D:\\upload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
