--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,13 @@ logging.level.org.zerock=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-# thymeleaf ?? ?? ???? ????? ??? ?? ?? ?? ???..
+# thymeleaf
 spring.thymeleaf.cache=false
 
 spring.cloud.gcp.credentials.location=file:/Users/suhong/Downloads/pick-a-food-vision-708c9eb9dfc6.json
 spring.cloud.gcp.project-id=pick-a-food-vision
+
+spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.location=/Users/suhong/upload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
