partially implement food repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,22 +4,24 @@ spring.datasource.url=jdbc:mariadb://106.241.252.54:8090/webdb
 spring.datasource.username=webuser
 spring.datasource.password=webuser
 
+# jpa
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
 
 # log config
 logging.level.org.springframework.orm=DEBUG
 logging.level.org.zerock=DEBUG
 
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
-
 # thymeleaf
 spring.thymeleaf.cache=false
 
-spring.cloud.gcp.credentials.location=file:/Users/suhong/Downloads/pick-a-food-vision-708c9eb9dfc6.json
-spring.cloud.gcp.project-id=pick-a-food-vision
-
+# multipart settings
 spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.location=/Users/suhong/upload
+spring.servlet.multipart.location=/Users/suhong/upload
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
+
+# vision api
+spring.cloud.gcp.credentials.location=file:/Users/suhong/Downloads/pick-a-food-vision-708c9eb9dfc6.json
+spring.cloud.gcp.project-id=pick-a-food-vision
